--- a/Asternoids/Assembly-CSharp-vs.csproj
+++ b/Asternoids/Assembly-CSharp-vs.csproj
@@ -46,11 +46,11 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\BulletManagerScript.cs" />
-     <Compile Include="Assets\CharacterController.cs" />
-     <Compile Include="Assets\EnemyAI.cs" />
-     <Compile Include="Assets\EnemyManagerScript.cs" />
-     <Compile Include="Assets\FollowPlayerScript.cs" />
+     <Compile Include="Assets\Scripts\BulletManagerScript.cs" />
+     <Compile Include="Assets\Scripts\CharacterController.cs" />
+     <Compile Include="Assets\Scripts\EnemyAI.cs" />
+     <Compile Include="Assets\Scripts\EnemyManagerScript.cs" />
+     <Compile Include="Assets\Scripts\FollowPlayerScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
